ghidra_find5728a0.txt
INFO  Using log config file: jar:file:/D:/LeagueOfLegendsV2/ghidra_full/ghidra_11.3.2_PUBLIC/Ghidra/Framework/Generic/lib/Generic.jar!/generic.log4j.xml (LoggingInitialization)  
INFO  Using log file: C:\Users\loicd\AppData\Roaming\ghidra\ghidra_11.3.2_PUBLIC\application.log (LoggingInitialization)  
INFO  Loading user preferences: C:\Users\loicd\AppData\Roaming\ghidra\ghidra_11.3.2_PUBLIC\preferences (Preferences)  
INFO  Searching for classes... (ClassSearcher)  
INFO  Class search complete (672 ms) (ClassSearcher)  
INFO  Initializing SSL Context (SSLContextInitializer)  
INFO  Initializing Random Number Generator... (SecureRandomFactory)  
INFO  Random Number Generator initialization complete: SHA1PRNG (SecureRandomFactory)  
INFO  Trust manager disabled, cacerts have not been set (ApplicationTrustManagerFactory)  
INFO  Headless startup complete (1682 ms) (AnalyzeHeadless)  
INFO  Class searcher loaded 57 extension points (18 false positives) (ClassSearcher)  
INFO  HEADLESS Script Paths:
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\8051\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\DATA\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\WildcardAssembler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\PIC\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Debug\Debugger-rmi-trace\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\GnuDemangler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\FunctionID\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\BytePatterns\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\BSim\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Base\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\MicrosoftCodeAnalyzer\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Jython\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Debug\Debugger\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\SwiftDemangler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\PDB\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\SystemEmulation\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\DecompilerDependent\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\FileFormats\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\PyGhidra\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\VersionTracking\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Decompiler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\Atmel\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\JVM\ghidra_scripts (HeadlessAnalyzer)  
INFO  HEADLESS: execution starts (HeadlessAnalyzer)  
INFO  Opening existing project: D:\LeagueOfLegendsV2\ghidra_proj2 (HeadlessAnalyzer)  
INFO  Opening project: D:\LeagueOfLegendsV2\ghidra_proj2 (HeadlessProject)  
INFO  REPORT: Processing project file: /League of Legends.exe (HeadlessAnalyzer)  
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                         ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                           ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                                          ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                                                            ^
skipping D:\LeagueOfLegendsV2\ghidra_scripts\ReadSBox.java
INFO  SCRIPT: D:\LeagueOfLegendsV2\ghidra_scripts\FindAt5728a0.java (HeadlessAnalyzer)  
INFO  FindAt5728a0.java> No function contains 1405728a0. Disasm: (GhidraScript)  
INFO  FindAt5728a0.java>   1405728a0: MOV qword ptr [RSP + 0x8],RBX (GhidraScript)  
INFO  FindAt5728a0.java>   1405728a5: MOV qword ptr [RSP + 0x10],RBP (GhidraScript)  
INFO  FindAt5728a0.java>   1405728aa: MOV qword ptr [RSP + 0x18],RSI (GhidraScript)  
INFO  FindAt5728a0.java>   1405728af: PUSH RDI (GhidraScript)  
INFO  FindAt5728a0.java>   1405728b0: SUB RSP,0x130 (GhidraScript)  
INFO  FindAt5728a0.java>   1405728b7: MOV RBP,RCX (GhidraScript)  
INFO  FindAt5728a0.java>   1405728ba: MOVZX ESI,R9B (GhidraScript)  
INFO  FindAt5728a0.java>   1405728be: LEA RCX,[RSP + 0x20] (GhidraScript)  
INFO  FindAt5728a0.java>   1405728c3: MOVZX EDI,R8B (GhidraScript)  
INFO  FindAt5728a0.java>   1405728c7: MOV RBX,RDX (GhidraScript)  
INFO  FindAt5728a0.java>   1405728ca: CALL 0x140566790 (GhidraScript)  
INFO  FindAt5728a0.java>   1405728cf: MOV RCX,qword ptr [0x141da1490] (GhidraScript)  
INFO  FindAt5728a0.java>   1405728d6: MOVZX EAX,byte ptr [RSP + 0x160] (GhidraScript)  
INFO  FindAt5728a0.java>   1405728de: MOV dword ptr [RSP + 0x2c],0x1 (GhidraScript)  
INFO  FindAt5728a0.java>   1405728e6: MOV qword ptr [RSP + 0x20],RBX (GhidraScript)  
INFO  FindAt5728a0.java>   1405728eb: MOV RCX,qword ptr [RCX + 0x40] (GhidraScript)  
INFO  FindAt5728a0.java>   1405728ef: MOV byte ptr [RSP + 0x28],DIL (GhidraScript)  
INFO  FindAt5728a0.java>   1405728f4: MOV byte ptr [RSP + 0x29],AL (GhidraScript)  
INFO  FindAt5728a0.java>   1405728f8: MOV byte ptr [RSP + 0x2a],SIL (GhidraScript)  
INFO  FindAt5728a0.java>   1405728fd: CALL 0x141179dc0 (GhidraScript)  
INFO  FindAt5728a0.java>   140572902: LEA RDX,[RSP + 0x20] (GhidraScript)  
INFO  FindAt5728a0.java>   140572907: MOVSD qword ptr [RSP + 0x60],XMM0 (GhidraScript)  
INFO  FindAt5728a0.java>   14057290d: MOV RCX,RBP (GhidraScript)  
INFO  FindAt5728a0.java>   140572910: CALL 0x140589a90 (GhidraScript)  
INFO  FindAt5728a0.java>   140572915: MOV RCX,qword ptr [RSP + 0x100] (GhidraScript)  
INFO  FindAt5728a0.java>   14057291d: MOV EBX,0xffffffff (GhidraScript)  
INFO  FindAt5728a0.java>   140572922: TEST RCX,RCX (GhidraScript)  
INFO  FindAt5728a0.java>   140572925: JZ 0x14057293b (GhidraScript)  
INFO  FindAt5728a0.java>   140572927: ADD RCX,-0x4 (GhidraScript)  
INFO  FindAt5728a0.java>   14057292b: MOV EAX,EBX (GhidraScript)  
INFO  FindAt5728a0.java>   14057292d: XADD.LOCK dword ptr [RCX],EAX (GhidraScript)  
INFO  FindAt5728a0.java>   140572931: CMP EAX,0x1 (GhidraScript)  
INFO  FindAt5728a0.java>   140572934: JNZ 0x14057293b (GhidraScript)  
INFO  FindAt5728a0.java>   140572936: CALL 0x1410dd1e0 (GhidraScript)  
INFO  FindAt5728a0.java>   14057293b: MOV RCX,qword ptr [RSP + 0x78] (GhidraScript)  
INFO  FindAt5728a0.java>   140572940: TEST RCX,RCX (GhidraScript)  
INFO  FindAt5728a0.java>   140572943: JZ 0x140572957 (GhidraScript)  
INFO  FindAt5728a0.java>   140572945: ADD RCX,-0x4 (GhidraScript)  
INFO  FindAt5728a0.java>   140572949: XADD.LOCK dword ptr [RCX],EBX (GhidraScript)  
INFO  FindAt5728a0.java>   14057294d: CMP EBX,0x1 (GhidraScript)  
INFO  FindAt5728a0.java>   140572950: JNZ 0x140572957 (GhidraScript)  
INFO  FindAt5728a0.java>   140572952: CALL 0x1410dd1e0 (GhidraScript)  
INFO  FindAt5728a0.java>   140572957: CMP dword ptr [RSP + 0x5c],0x0 (GhidraScript)  
INFO  FindAt5728a0.java>   14057295c: JL 0x140572968 (GhidraScript)  
INFO  FindAt5728a0.java>   14057295e: MOV RCX,qword ptr [RSP + 0x50] (GhidraScript)  
INFO  FindAt5728a0.java>   140572963: CALL 0x1410dd1e0 (GhidraScript)  
INFO  FindAt5728a0.java>   140572968: LEA R11,[RSP + 0x130] (GhidraScript)  
INFO  FindAt5728a0.java>   140572970: MOV RBX,qword ptr [R11 + 0x10] (GhidraScript)  
INFO  FindAt5728a0.java>   140572974: MOV RBP,qword ptr [R11 + 0x18] (GhidraScript)  
INFO  FindAt5728a0.java>   140572978: MOV RSI,qword ptr [R11 + 0x20] (GhidraScript)  
INFO  FindAt5728a0.java>   14057297c: MOV RSP,R11 (GhidraScript)  
INFO  FindAt5728a0.java>   14057297f: POP RDI (GhidraScript)  
INFO  FindAt5728a0.java>   140572980: RET (GhidraScript)  
INFO  FindAt5728a0.java>   140572981: INT3 (GhidraScript)  
INFO  FindAt5728a0.java> === DONE === (GhidraScript)  
INFO  REPORT: Save succeeded for processed file: /League of Legends.exe (HeadlessAnalyzer)  
